Statistics -implemented wall post(share)

--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -464,4 +464,10 @@
     <string name="read_more">Read more</string>
     <string name="unnamed_chat">Unnamed Chat</string>
 
+
+
+    <string name="permission_storage_rationale">Please Allow storage permission.</string>
+    <string name="permission_storage_denied">You need to enable permission in settings </string>
+    <string name="permission_storage_neverask">Never ask again.</string>
+
 </resources>
