--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -412,10 +412,13 @@
     <string name="friends_you_have_in_common">Friends you have in common</string>
     <string name="join_now_sign_in">Join Now / Sign In</string>
     <string name="join_now">Join Now</string>
+    <string name="sign_in">Sign In</string>
+
 
     <string name="join_with_facebook">Join now with<b> Facebook </b></string>
     <string name="forgot_your_password">Forgot your password?</string>
     <string name="log_in_with_facebook">Log in with<b> Facebook </b></string>
+    <string name="sign_in_with_facebook">Sign in with<b> Facebook </b></string>
     <string name="this_chat_is_public_phone">This chat is PUBLIC</string>
     <string name="this_chat_is_private_phone">This chat is PRIVATE</string>
     <string name="user_profile">User Profile</string>
