--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -105,7 +105,7 @@
     <!-- video chat -->
     <string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
     <string name="video_chat_text_1_phone"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
-    <string name="video_chat_text_2">Video chat allows you to call up to 3 friends for group video chat, so you can experience the action with the poeple you love wherever you are!</string>
+    <string name="video_chat_text_2">Video chat allows you to call up to 3 friends for a\n group video chat, so you can experience the action\n with the poeple you love wherever you are!</string>
     <string name="video_chat_button_text">Begin your call</string>
     <string name="starting_new_call_search_hint">Search public chats</string>
     <string name="starting_new_call_search_title">Starting New Call</string>
@@ -487,5 +487,10 @@
 
     </string-array>
     <string name="your_ready_to_play"><![CDATA[ Your ready to play.\n  <font color="#c3ff01"> Welcome to the team. </font> ]]></string>
+    <string name="login_slider_chat"><![CDATA[ You can chat with  <font color="#c3ff01"> friends, create groups </font>and even\n connect with your <font color="#c3ff01"> favourite players! </font>]]></string>
+    <string name="chat_with_friends"><![CDATA[ Chat with  <font color="#c3ff01"> friends. </font>]]></string>
+    <string name="to_access_full_features">To access full features…</string>
+    <string name="or">or</string>
+
 
 </resources>
