--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -104,7 +104,11 @@
 
     <!-- video chat -->
     <string name="video_chat_text_1"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
-    <string name="video_chat_text_1_phone"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>
+
+    <!--<string name="video_chat_text_1_phone"><![CDATA[ Watch the match with your <font color="#c3ff01">friends.</font>]]></string>-->
+
+    <string name="video_chat_text_1_phone">Watch the match with your <font color="#c3ff01">friends.</font></string>
+
     <string name="video_chat_text_2">Video chat allows you to call up to 3 friends for a\n group video chat, so you can experience the action\n with the poeple you love wherever you are!</string>
     <string name="video_chat_button_text">Begin your call</string>
     <string name="starting_new_call_search_hint">Search public chats</string>
@@ -417,7 +421,7 @@
 
     <string name="join_with_facebook">Join now with<b> Facebook </b></string>
     <string name="forgot_your_password">Forgot your password?</string>
-    <string name="log_in_with_facebook">Log in with<b> Facebook </b></string>
+    <string name="log_in_with_facebook">Login with<b> Facebook </b></string>
     <string name="sign_in_with_facebook">Sign in with<b> Facebook </b></string>
     <string name="this_chat_is_public_phone">This chat is PUBLIC</string>
     <string name="this_chat_is_private_phone">This chat is PRIVATE</string>
