--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <!-- Login screen -->
     <string name="terms_and_conditions">http://www.sortdirectkick.tv/terms</string>
+    <string name="terms_and_privacy">Terms &amp; Privacy</string>
     <string name="login_sign_up">Sign up</string>
     <string name="login_login">Login</string>
     <string name="login_slider_text_1">Bringing fans together</string>
