--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -343,7 +343,7 @@
     <string name="no_results">No results</string>
     <string name="no_result">No result</string>
     <string name="login_or_sign_up">Login / Signup</string>
-    <string name="rewards_and_items_received">Rewards and items recieved from Gym Bags</string>
+    <string name="rewards_and_items_received">Rewards and items received from Gym Bags</string>
     <string name="you_have">YOU HAVE</string>
     <string name="bonus_gym_bag">+ BONUS GYM BAG</string>
     <string name="bandles">BUNDLES</string>
