--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -123,6 +123,17 @@
     <string name="telephone_no">Telephone No</string>
     <string name="member_info">Member info</string>
 
+    <string name="match_day">%1$d Day</string>
+    <string name="match_days">%1$d Days</string>
+
+    <string name="match_hour">%1$d Hour</string>
+    <string name="match_hours">%1$d Hours</string>
+
+    <string name="match_min">%1$d Min</string>
+    <string name="match_mins">%1$d Mins</string>
+
+    <string name="match_sec">%1$d Sec</string>
+    <string name="match_secs">%1$d Secs</string>
 
     <plurals name="days_until_match">
         <item quantity="zero">TODAY</item>
