--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -289,7 +289,7 @@
     <string name="chat_no_changes">There are no changes in this chat.</string>
     <string name="try_again_latter">Error. Try again later.</string>
     <string name="enter_friend_name_invite">Enter friend name to invite.</string>
-    <string name="enter_valid_password_and_display_name">Please enter valid password and displayName!</string>
+    <string name="enter_valid_password_and_display_name">Please enter valid password and user name</string>
     <string name="login_try_again">Please re-enter your password and try again</string>
     <string name="remove_friend">Un-Friend</string>
     <string name="friend_reqest">Send Friend Request</string>
