--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -459,6 +459,7 @@
     <string name="friends_in_video_chat">Friends in Video Chat</string>
     <string name="friend_in_video_chat">1 Friend in Video Chat</string>
     <string name="search_your_friends">Search your friends</string>
+    <string name="friends_list">Friends List</string>
 
     <string-array name="language_names">
         <item>Bengali</item>
