--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -444,7 +444,7 @@
     <string name="chat">Chat</string>
     <string name="play_game">Play Game</string>
     <string name="more">More</string>
-    <string name="pinned">Pinned</string>
+    <string name="posts">Posts</string>
     <string name="comments">Comments</string>
     <string name="friend_you_and">Friend you and</string>
     <string name="have_in_common">have in common</string>
