--- a/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/strings.xml
@@ -27,19 +27,19 @@
     <string name="forgot_password_error">Error</string>
     <string name="sign_up_facebook">Sign up with Facebook</string>
     <string name="sign_up_or">or</string>
-    <string name="sign_up_firstname">First name</string>
-    <string name="sign_up_lastname">Last name</string>
+    <string name="sign_up_first_name">First name</string>
+    <string name="sign_up_last_name">Last name</string>
     <string name="sign_up_username">Display name</string>
     <string name="sign_up_email">Email</string>
     <string name="sign_up_phone">Phone</string>
-    <string name="sign_up_passwoed">Password</string>
+    <string name="sign_up_password">Password</string>
     <string name="sign_up_sign_up">Sign up</string>
     <string name="sign_up_text">By singing up, you are agree to SportsSidekick\'"s <font color="@android:color/white"> Terms and Conditions of Use </font> and <font color="@android:color/white">Privacy Policy.</font></string>
-    <string name="dialog_ok">Ok</string>
+    <string name="dialog_ok">OK</string>
     <string name="dialog_warning">Warning</string>
     <string name="dialog_message">You must enter your </string>
     <string name="dialog_message_not_valid_email">Not valid email address.</string>
-    <string name="dialog_interner_connection_falied">No interner connection. Try again later.</string>
+    <string name="dialog_internet_connection_failed">No interner connection. Try again later.</string>
     <string name="dialog_message_facebook_error">Your public profile could not be received. Please try again!</string>
     <string name="uploading">Uploading…</string>
     <string name="wall_fragment_caption">Wall</string>
@@ -242,7 +242,7 @@
     <string name="tip_13_step_1">Open the Shop module by tapping the Shop tab on the top left of the screen.</string>
     <string name="tip_13_step_2">You can Navigate back and forward using the menu at the bottom of the Shop module.</string>
     <string name="share_using">Share with:</string>
-    <string name="enter_comment_hint">Enter a comment ...</string>
+    <string name="enter_comment_hint">Enter a comment …</string>
     <string name="tutorial_step">STEP</string>
 
     <string name="video_chat_permission_microphone_and_camera_rationale">Please enable microphone and camera in order to use video chat.</string>
@@ -276,13 +276,13 @@
     <string name="video_chat_maximum">Sorry you can only video call with a maximum of 3 friends, and this call is already full!</string>
     <string name="video_chat_you">You</string>
     <string name="video_chat_receive_call">Receiving a call from</string>
-    <string name="video_chat_accpet_call">Accept the call?</string>
+    <string name="video_chat_accept_call">Accept the call?</string>
     <string name="permissions">Permissions</string>
     <string name="wall_new_post_title">Not sure we need title here</string>
-    <string name="wall_new_post_subtitle">A subtitle...</string>
+    <string name="wall_new_post_subtitle">A subtitle…</string>
     <string name="wall_text_for_post">Please enter some text for post!</string>
-    <string name="chat_frends_in_chat">Friends in Chat</string>
-    <string name="chat_frend_in_chat">1 Friend in Chat</string>
+    <string name="chat_friends_in_chat">Friends in Chat</string>
+    <string name="chat_friend_in_chat">1 Friend in Chat</string>
     <string name="chat_choose_option">Choose option</string>
     <string name="chat_choose_from_library">Choose from library</string>
     <string name="chat_use_camera">Use Camera</string>
@@ -292,10 +292,10 @@
     <string name="enter_valid_password_and_display_name">Please enter valid password and user name</string>
     <string name="login_try_again">Please re-enter your password and try again</string>
     <string name="remove_friend">Un-Friend</string>
-    <string name="friend_reqest">Send Friend Request</string>
-    <string name="friend_unfollow">Un-Follow Friend</string>
+    <string name="friend_request">Send Friend Request</string>
+    <string name="friend_un_follow">Un-Follow Friend</string>
     <string name="friend_follow">Follow Friend</string>
-    <string name="fiil_all_data">You have to fill all data</string>
+    <string name="fill_all_data">You have to fill all data</string>
     <string name="registration_error">Registration error. Try again later.</string>
     <string name="registration_error_username_taken">Registration error - username already taken, please select a different username.</string>
     <string name="no_users_selected">No users selected!</string>
@@ -339,7 +339,6 @@
     <string name="friends_in_chat">Friends in Chat</string>
     <string name="edit_chat">Edit Chat</string>
     <string name="group_chat_name">Enter a name for your Group Chat</string>
-    <string name="delete">Delete</string>
     <string name="save">Save</string>
     <string name="invite">Invite</string>
     <string name="search_public_chats">Search Public Chats</string>
@@ -358,13 +357,13 @@
     <string name="rewards_and_items_received">Rewards and items received from Gym Bags</string>
     <string name="you_have">YOU HAVE</string>
     <string name="bonus_gym_bag">+ BONUS GYM BAG</string>
-    <string name="bandles">BUNDLES</string>
+    <string name="bundles">BUNDLES</string>
     <string name="vs">vs</string>
     <string name="login_sign_up_text">Login / Signup</string>
     <string name="add_new_chat">ADD NEW CHAT</string>
     <string name="demo_caption">Demo caption Demo caption Demo caption Demo caption</string>
     <string name="comment_text">Comment text</string>
-    <string name="chat_hint">Enter your message here...</string>
+    <string name="chat_hint">Enter your message here…</string>
     <string name="create">Create</string>
     <string name="demo_content">Demo content.</string>
     <string name="caps">CAPS</string>
@@ -381,7 +380,7 @@
     <string name="store_big">STORE</string>
     <string name="tip">TIP</string>
     <string name="try_to_following_the_official_sporting_account">Try to following the official sporting account</string>
-    <string name="waiting_for_active_internet_connection">Waiting for active internet connection...</string>
+    <string name="waiting_for_active_internet_connection">Waiting for active internet connection…</string>
     <string name="no_connection_title">No Connection</string>
     <string name="no_connection_message">You need to be connected to the internet to do this</string>
 
@@ -493,19 +492,7 @@
     <string name="permission_storage_neverask">Never ask again.</string>
 
     <string name="welcome_your_account_is_being_setup"><![CDATA[ Welcome, your account is being setup! While you\n wait, check out some of our <font color="#c3ff01"> awesome features! </font> ]]></string>
-    <string-array name="account_creating_text">
-        <item><![CDATA[ Lorem ipsum dolor sit amet, ad eum audire corrumpit conceptam, te corpora  ]]></item>
-        <item><![CDATA[ You can chat with <font color="#c3ff01"> friends, create groups </font> and \n even connect with your  <font color="#c3ff01"> favourite players! </font> ]]></item>
-        <item><![CDATA[ Ea usu alterum epicuri. Nec id sonet iudico. Sed at commune qualisque, dolorum deserunt et pri. Pri esse singulis gloriatur no. ]]></item>
-        <item><![CDATA[ Sed simul nobis et, saepe aperiri an sed. Idque tacimates eu vix. Eum ne percipit consetetur consequuntur. Ei vis vidisse admodum. Ius id timeam moderatius. Qui noluisse accusata salutatus at. Nec quo ]]></item>
-        <item><![CDATA[ Sed simul nobis et, saepe aperiri an sed. Idque tacimates eu vix. Eum ne percipit consetetur consequuntur. Ei vis vidisse admodum. Ius ]]></item>
-        <item><![CDATA[ His audiam propriae legendos ut. Est nonumy percipitur ad. Alii discere ad vim, ad nam vide zril probatus, ne mea numquam eloquentiam dissentiunt. </font> ]]></item>
-        <item><![CDATA[ Ex quo suas putent vivendo. Cu simul homero ponderum mel. At erat dolorum reprehendunt sed. ]]></item>
-        <item><![CDATA[ ceptam nec. Et sit soluta consequat instructior. Eam tale ubique similique et, eu graece assueverit vel. ]]></item>
-        <item><![CDATA[ Postulant molestiae in qui, ius eu duis congue tollit. Et eum albucius disputando conclusionemque, dicat faci ]]></item>
 
-
-    </string-array>
     <string name="your_ready_to_play"><![CDATA[ Your ready to play.\n  <font color="#c3ff01"> Welcome to the team. </font> ]]></string>
     <string name="login_slider_chat"><![CDATA[ You can chat with  <font color="#c3ff01"> friends, create groups </font>and even\n connect with your <font color="#c3ff01"> favourite players! </font>]]></string>
     <string name="chat_with_friends"><![CDATA[ Chat with  <font color="#c3ff01"> friends. </font>]]></string>
@@ -514,6 +501,20 @@
 
     <string name="chat_with_friends_login_description">You can chat with friends, create groups and even\n connect with your favourite players!</string>
     <string name="chat_with_friends_login"> Chat with friends.</string>
-    <string name="login_or_signup">Login / Signup</string>
+
+    <string name="cant_start_video">Can\'t start video.</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="search">Search</string>
+    <string name="news">NEWS</string>
+    <string name="pin_count_placeholder">--</string>
+    <string name="next_match">Next match</string>
+    <string name="ellipsis">…</string>
+    <string name="message_time_splitter">|</string>
+    <string name="password_placeholder">***********</string>
+    <string name="max_level_value">99</string>
+    <string name="reset">Reset</string>
+    <string name="offline">offline</string>
+    <string name="watch_promo">Watch promo</string>
 
 </resources>
